# Document-RAG

./: .gitignore  api.py  models.py
backend/: api.py  main.py  pyproject.toml
frontend/src/: App.css  App.js
