[project]
name = "documentrag"
version = "0.1.0"
description = ""
authors = [
    {name = "akhilepam",email = "kamuni_akhil@epam.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "pymilvus (>=2.6.2,<3.0.0)",
    "pypdf (>=6.1.0,<7.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "fastapi[all] (>=0.117.1,<0.118.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
